--- a/WebDEV/index.html
+++ b/WebDEV/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -39,4 +39,5 @@
 </body>
 
 </html>
+
 
