--- a/WebDEV/contact.html
+++ b/WebDEV/contact.html
@@ -12,7 +12,7 @@
         <h1>Contact Us</h1>
     </header>
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -35,5 +35,6 @@
     </main>
     <script src="script.js"></script>
 </body>
+
 
 </html>
