--- a/WebDEV/about.html
+++ b/WebDEV/about.html
@@ -12,7 +12,7 @@
         <h1>About Us</h1>
     </header>
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -28,5 +28,6 @@
         <p>&copy; 2025 Benjie Tech Stores</p>
     </footer>
 </body>
+
 
 </html>
