--- a/WebDEV/Cart.html
+++ b/WebDEV/Cart.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -36,5 +36,6 @@
    
     <script src="script.js"></script>
 </body>
+
 
 </html>
