--- a/WebDEV/products.html
+++ b/WebDEV/products.html
@@ -12,7 +12,7 @@
         <h1>Our Products</h1>
     </header>
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -84,5 +84,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
